fix: Layout issues fixed

--- a/src/app/pages/contact/Contact.module.css
+++ b/src/app/pages/contact/Contact.module.css
@@ -1,3 +1,8 @@
+.title {
+    margin-top: 30px;
+    font-size: 30px;
+}
+
 .box {
     width: 250px;
     height: 120px;
@@ -6,6 +11,10 @@
 
     background-color: var(--gray-light-color);
     border-radius: 15px;
+}
+
+.name {
+    font-weight: bold;
 }
 
 .contact {
@@ -26,7 +35,6 @@
 .textarea {
     width: 100%;
     padding: 0.5rem;
-    /* margin-top: 0.5rem; */
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
