--- a/src/app/pages/education/Education.module.css
+++ b/src/app/pages/education/Education.module.css
@@ -1,3 +1,8 @@
+.title {
+    margin-top: 30px;
+    font-size: 30px;
+}
+
 .box {
 	width: 200px;
 	height: 120px;
